# FP_Dedup

./: .gitignore  README.md
DL/: .dockerignore  =4.8  Dockerfile  diagram.md  pyproject.toml  requirements.txt
DL/docs/: bozorth_matching.md  fingerflow_explanation.md
DL/scripts/: download_scripts.py  run_bozorth_eval.py  run_extract_dl.py  run_verifier.py
DL/src/fingerprint_dl.egg-info/: PKG-INFO  SOURCES.txt
DL/src/fp/: __init__.py  bozorth3_like.py  bozorth_eval.py  dl_extractor.py  verifier.py
classic/: main.py  minutiae_skeleton.py  requirements.txt
nbis/: Dockerfile  nbis_mindtct_extractor.py  requirements.txt
nbis/scripts/: run_extract.py
